[project]
name = "mcp-naver-maps"
version = "0.1.0"
description = "MCP server for Naver Maps API and Naver Search API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "es6kr", email = "es6kr@es6.kr" }
]
keywords = ["mcp", "naver", "maps", "search", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx[http2]>=0.28.1",
    "mcp[cli]>=1.7.1",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/es6kr/mcp-naver-maps"
Repository = "https://github.com/es6kr/mcp-naver-maps"

[project.scripts]
mcp-naver-maps = "mcp_naver_maps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_naver_maps"]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 100
indent-width = 2
